# TechGear-Agent

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/raw/accessories/: accessories.md
data/raw/desktops/: components.md
data/raw/laptops/: macbook.md  windows_laptops.md
data/raw/policies/: return_policy.md  warranty.md
docker/: .dockerignore  Dockerfile
evaluation/: test_cases.json
scripts/: ingest_data.py  run_evaluation.py  test_connections.py
src/: config.py
src/agent/: agent.py  prompts.py
src/agent/tools/: order_tool.py  rag_tool.py
src/api/: main.py  schemas.py
src/api/routers/: chat.py  webhook.py
src/integrations/: google_sheets.py  telegram_bot.py
src/rag/: chunker.py  embedder.py  retriever.py
tests/: test_agent.py  test_api.py  test_rag.py
